--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+
     <title> Exelify </title>
     
     <script src=""https://unpkg.com/htmx.org@1.9.12"></script>
@@ -14,7 +15,7 @@
     <main>
         {% block content %}
         {% endblock %}
-        
+
     </main>
 </body>
 </html>
